# codex-api-switcher

./: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
