[package]
name = "codex_account_switcher"
version = "1.0.0"
description = "Codex account switcher built with Tauri"
authors = ["kaelan"]
license = "MIT"
repository = "git@github.com:newbeeeeeeee-cpu/codex-api-switcher.git"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "codex_account_switcher_lib"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "=2.3.0", features = [] }

[dependencies]
dirs = "6"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
serde_json = "1.0"
tauri = { version = "=2.6.2", features = [] }
tauri-plugin-log = "=2.6.0"
